<resources>
    <string name="app_name">My Vehicle</string>
    <string name="body_paint">Body &amp; Paint</string>
    <string name="mechanical_service">Mechanical Service</string>
    <string name="full_Service">Full Service</string>

    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_filter">Filter</string>

    <string name="ll_bubble_transition">ll_bubble_transition</string>

    <string name="viewpager_transition">viewpager_transition</string>
    <string name="folder_name">/MyVehicle</string>
    <string name="folder_name_tmp">/Temp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="estimation">Estimation</string>
    <string name="hint_total_time">Total time in hours</string>
    <string name="hint_total_cost">Total cost in Rs.</string>
    <string name="hint_total_dents">Total dents</string>
    <string name="hours">HRS</string>
    <string name="rupees">\u20B9</string>

    <!-- Related to dents rv adapter-->
    <string name="dents">Dents</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="depth">Depth</string>
    <string name="time">Time in hours</string>
    <string name="cost">Cost in \u20B9.</string>
    <string name="total_time">Total Time:</string>
    <string name="total_dents">Total Dents:</string>
    <string name="total_cost">Total Cost:</string>

    <string name="add_dent">Add</string>
    <string name="request_for_approval">Request for Approval</string>
    <string name="summary">Summary</string>

    <string name="alert_save">Do you want to save before exit?</string>
    <string name="please_wait">Please wait&#8230;</string>
</resources>
