<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_custom"/>
    <!-- <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Hello World!"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />-->

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_body_paint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_paint"
                android:textAllCaps="false"
                android:onClick="onButtonClick"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mechanical_service"
                android:textAllCaps="false"
                android:onClick="onButtonClick"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_Service"
                android:onClick="onButtonClick"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>