<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVeryDark"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">
<!--    #E6000000-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#D5FFFFFF"
        card_view:cardElevation="2dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_image_transition"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_margin="5dp"
                android:transitionName="@string/viewpager_transition"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_left"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/arrow_left_drop_circle_outline"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/arrow_right_drop_circle_outline"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bubble_parent_transition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:transitionName="@string/ll_bubble_transition"
                tools:targetApi="lollipop" />
        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>