<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="2dp"
    android:background="?attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <!--<com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dents"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textStyle="bold" />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_dent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/colorPrimaryVeryDark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight=".1"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_length"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/length"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="@android:color/holo_red_light" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_width"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/width"
                        android:imeOptions="actionNext"
                        android:textColor="@android:color/holo_red_light"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_depth"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/depth"
                        android:imeOptions="actionNext"
                        android:textColor="@android:color/holo_red_light"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/spinner_length"
                    android:background="@drawable/spinner_bg_statelist" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/spinner_width"
                    android:background="@drawable/spinner_bg_statelist" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:textColorHint="@color/colorAccent"
                    android:id="@+id/spinner_depth"
                    android:background="@drawable/spinner_bg_statelist" />
            </LinearLayout>-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight=".1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_time"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:hint="@string/time"
                        android:imeOptions="actionNext"
                        android:inputType="number|phone"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_cost"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cost"
                        android:imeOptions="actionNext"
                        android:textColor="@android:color/holo_red_light"
                        android:inputType="number|phone"
                        android:maxLength="10"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>